# RTIP-MD

RTIP-MD/: 14-Ca-OH-HOCH2CHOH.xyz  15-HOCHCHOH.xyz  B97-3C.inp  Cargo.toml  README.txt
RTIP-MD/src/: lib.rs
RTIP-MD/src/common/: constants.rs  error.rs
RTIP-MD/src/io/: input.rs  output.rs
RTIP-MD/src/nn/: global_nn.rs  interfragment_descriptor.rs  intrafragment_descriptor.rs  mod.rs  protein.rs  training.rs  training_data.rs
RTIP-MD/src/pes_exploration/: md.rs  pathway_sampling.rs  potential.rs  rtip.rs  system.rs  traits.rs
